# sdl-hmi-lvgl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lv_conf.h  main.cc
3rd_party-static/: CMakeLists.txt
3rd_party-static/jsoncpp/: CMakeLists.txt
gui/: CMakeLists.txt
gui/assets/: CMakeLists.txt
gui/assets/convert/: CMakeLists.txt  abs_icon.c  btn_bg_green.c  btn_bg_red.c  call_icon.c  call_made_icon.c  call_missed_incoming_icon.c  call_missed_outgoing_icon.c  call_received_icon.c  contact_icon.c  contact_profile_call_icon.c  coolant_temp_icon.c  end_call_icon.c  engine_trouble_icon.c  fuel_icon.c  fuel_level_mask.c  hang_up_call_icon.c  headlight_icon.c  icon_wifi.c  img_gauge.c  img_list_border.c  img_setup.c  oil_lower_icon.c  signal_icon.c
gui/include/: GaugeCluster.h  GuiController.h  HomePage.h  MainPage.h  Page.h  SettingsPage.h  Telephony.h  UIListPage.h  demo_theme.h
gui/src/: GaugeCluster.cc  GuiController.cc  HomePage.cc  MainPage.cc  Page.cc  SettingsPage.cc  Telephony.cc  UIListPage.cc  demo_theme.c  lv_conf.h  sdl2w.c  sdl2w.h
sdl2w/: sdl2w.c  sdl2w.h
sdl_message_handler/: BasicCommunication.cc  BasicCommunication.h  CMakeLists.txt  GuiController.h  SDLMessageController.cc  SDLMessageController.h  WebsocketConnection.cc  WebsocketConnection.h  WebsocketSession.cc  WebsocketSession.h
sdl_message_handler/include/: ApplicationInfo.h  BasicCommunication.h  Buttons.h  GuiCallbacks.h  SDLMessageController.h  SDLMessageControllerImpl.h  SDLTypes.h  SdlcoreTypes.h  UI.h  VR.h  WebsocketConnection.h  WebsocketSession.h
sdl_message_handler/src/: ApplicationInfo.cc  BasicCommunication.cc  Buttons.cc  SDLMessageController.cc  SDLMessageControllerImpl.cc  UI.cc  VR.cc  WebsocketConnection.cc  WebsocketSession.cc
tools/: image_converter.sh
tools/cmake/helpers/: platform.cmake  sources.cmake
utils/: CMakeLists.txt  Log.h  json_rc_constants.h  jsoncpp_reader_wrapper.cc
utils/include/: MessageQueue.h  Thread.h  json_rc_constants.h  jsoncpp_reader_wrapper.h
utils/src/: Log.cc  Thread.cc  jsoncpp_reader_wrapper.cc
