include(${CMAKE_SOURCE_DIR}/tools/cmake/helpers/sources.cmake)
set(UTILS_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set(UTILS_INCLUDE_DIRECTORY ${UTILS_INCLUDE_DIRECTORY} PARENT_SCOPE)

include_directories(
  ${JSONCPP_INCLUDE_DIRECTORY}
)
message("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
collect_sources(SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")

#list(REMOVE_ITEM SOURCES
#    "${CMAKE_CURRENT_SOURCE_DIR}/Log.cc"
#    "${CMAKE_CURRENT_SOURCE_DIR}/Thread.cc"
#)
add_library(utils ${SOURCES})
